Changed colour theme of the main page. Linked blog page.

--- a/otherpages/blog.html
+++ b/otherpages/blog.html
@@ -13,10 +13,10 @@
     <div class="blank-box">
       <header>
         <div class="back">
-          <a href="/homepage.html"><img src="/icons/back.png" alt="backspace icon"></a>
+          <a href="/richard.html"><img src="/icons/back.png" alt="backspace icon"></a>
         </div>
         <h1>
-          Our Blog
+          My Blog
         </h1>
         <nav>
           <a href="#">Gallery</a> <!--# stands for not implemented yet-->
@@ -31,9 +31,9 @@
       
     <section class="main">
       <div>
-        <span class="primary"> Hello </span> <span class="secondary">We are Jennifer and Richard!</span> This page is dedicated to documenting our experiences 
-        and adventures as we explore the world together. We genuinely love traveling as a couple; discovering new places, 
-        trying different foods, and creating unforgettable memories along the way. Join us as we share the highlights of our 
+        <span class="primary"> Hello </span> This page is dedicated to documenting my experiences 
+        and adventures in different countries and places. I genuinely love traveling; discovering new places, 
+        trying different foods, and creating unforgettable memories along the way. Join me as I share the highlights of my 
         journeys and the special moments that make each trip unique.
       </div>
     </section>
