--- a/richard.html
+++ b/richard.html
@@ -12,24 +12,24 @@
 <body>
     <section class="page">
         <header>
-            <a href="/homepage.html">
+            <a href="/otherpages/blog.html">
                 <h1>
-                    HOME
+                    MY BLOG
                 </h1>
             </a>
             <a href="#">
                 <h1>
-                    ABOUT ME
+                    SKILLS
                 </h1>
             </a>
             <a href="#">
                 <h1>
-                    LEARNING PATH
+                    PROJECTS
                 </h1>
             </a>
             <a href="#">
                 <h1>
-                    PORTFOLIO
+                    CONTACT
                 </h1>
             </a>
         </header>
@@ -42,7 +42,9 @@
                     Software Engineer
                 </h2>
                 <h3>
-                    Hello there, I'm Richard and I'm cool! <br> Blah blah blah blah blah blah blah blah blah blah
+                    I’m passionate about building modern, efficient, and user-friendly applications.
+                    With experience in full-stack development, automation, and cloud technologies, 
+                    I enjoy solving complex problems and creating solutions that make an impact. 
                 </h3>
                 <div class="foot">
                     <div class="icon">
