Finished experience section with placeholder text

--- a/richard.html
+++ b/richard.html
@@ -92,7 +92,98 @@
         </section>
     </section>
 
-    <!--BELOW IS PAGE 2-->
+    <!-- EXPERIENCE -->
+    <section class="page">
+        <section class="experience">
+            <h1 class="xp-title">EXPERIENCE</h1>
+            <ol class="timeline">
+                <!-- OTPP -->
+                <li class="tl-item">
+                    <article class="tl-card">
+                        <div class="tl-top">
+                            <div>
+                                <h3>Product Engineer • Ontario Teachers’ Pension Plan</h3>
+                                <p class="tl-meta">May 2024 – Aug 2025 • Toronto</p>
+                            </div>
+                            <span class="tl-badge">Full-time Co-op</span>
+                        </div>
+
+                        <ul class="tl-bullets">
+                            <li>Automated K1 tax form processing end-to-end; removed manual entry and added AI-based validation.</li>
+                            <li>Refactored into a Python microservice to resolve timeouts and cut failure points (3 platforms → 1).</li>
+                            <li>Built Power BI credential rotation with CyberArk + REST APIs (RSA-OAEP), reducing routine ops work.</li>
+                        </ul>
+                        <div class="tl-tags">
+                            <span>Python</span><span>C#/.NET</span><span>SQL</span><span>REST APIs</span><span>Power Automate</span><span>Oracle/Azure DB</span>
+                        </div>
+                    </article>
+                </li>
+
+                <!-- TRREB -->
+                <li class="tl-item">
+                <article class="tl-card">
+                    <div class="tl-top">
+                    <div>
+                        <h3>IT Administrator / Data Analyst • TRREB</h3>
+                        <p class="tl-meta">May 2023 – Aug 2023 • Toronto</p>
+                    </div>
+                    <span class="tl-badge">Internship</span>
+                    </div>
+                    <ul class="tl-bullets">
+                    <li>Created SQL views & stored procedures to streamline reporting and data access.</li>
+                    <li>Maintained servers, switches, and routers to align with network standards.</li>
+                    </ul>
+                    <div class="tl-tags">
+                    <span>SQL</span><span>Networking</span><span>Automation</span>
+                    </div>
+                </article>
+                </li>
+
+                <!-- RSX -->
+                <li class="tl-item">
+                <article class="tl-card">
+                    <div class="tl-top">
+                    <div>
+                        <h3>RSX Software Developer • University of Toronto</h3>
+                        <p class="tl-meta">Sept 2022 – Mar 2023 • Toronto</p>
+                    </div>
+                    <span class="tl-badge">Student Dev</span>
+                    </div>
+                    <ul class="tl-bullets">
+                    <li>Collaborated on GIS tooling using OpenStreetMap data and pathfinding algorithms.</li>
+                    <li>Delivered UI features and map interactions from scratch.</li>
+                    </ul>
+                    <div class="tl-tags">
+                    <span>C/C++</span><span>Algorithms</span><span>OpenStreetMap</span>
+                    </div>
+                </article>
+                </li>
+
+                <!-- Project: FindWho -->
+                <li class="tl-item">
+                <article class="tl-card">
+                    <div class="tl-top">
+                    <div>
+                        <h3>FindWho Deep Learning Project</h3>
+                        <p class="tl-meta">May 2023 – Aug 2023</p>
+                    </div>
+                    <span class="tl-badge badge-blue">Project</span>
+                    </div>
+                    <ul class="tl-bullets">
+                    <li>Built real-time video inference using CNNs; implemented training loops and data pipelines.</li>
+                    <li>Shipped a working prototype for characteristic detection from camera input.</li>
+                    </ul>
+                    <div class="tl-tags">
+                    <span>PyTorch</span><span>Python</span><span>Computer Vision</span>
+                    </div>
+                </article>
+                </li>
+            </ol>
+        </section>
+    </section>
+
+    
+    <!--BELOW IS SKILLS PAGE-->
     <section class="page">
         <section class="skills-section">
             <h2 class="skills-title">SKILLS</h2>
