changed main page to index.html to test live pages github

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="page">
+    <section class="page" id="aboutme">
         <header>
             <!--<h1 class="headername">
                 RICHARD LIU
             </h1>-->
-            <a href="#">
+            <a href="#aboutme">
                 <h1>
                     ABOUT ME
                 </h1>
             </a>
-            <a href="#">
+            <a href="#experience">
                 <h1>
                     EXPERIENCE
                 </h1>
             </a>
-            <a href="#">
+            <a href="#skills">
                 <h1>
                     SKILLS
                 </h1>
             </a>
-            <a href="#">
+            <a href="#contact">
                 <h1>
                     CONTACT
                 </h1>
@@ -89,7 +89,7 @@
 
     <!-- EXPERIENCE -->
     <section class="page">
-        <section class="experience">
+        <section class="experience" id="experience">
             <h1 class="xp-title">EXPERIENCE</h1>
             <ol class="timeline">
                 <!-- OTPP -->
@@ -236,7 +236,7 @@
 
     <!--BELOW IS SKILLS PAGE-->
     <section class="page">
-        <section class="skills-section">
+        <section class="skills-section" id="skills">
             <h2 class="skills-title">SKILLS</h2>
             <div class="skills-grid">
                 
@@ -310,169 +310,10 @@
             </div>
         </section>
     </section>
+    <section class="page"> 
+        <section class="contact" id="contact">
 
-    <!--BELOW IS PAGE 3-->
-    <section class="page">
-        <section class="p2head">
-            <h1>
-                SKILLS
-            </h1>
-        </section>
-        <section class="main2">
-            <section class="left2">
-                <div class="skills2">
-                    <h1>
-                        SKILL
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    </p>
-                </div>
-                <div class="skills2">
-                    <h1>
-                        SKILL
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    </p>
-                </div>
-                <div class="skills2">
-                    <h1>
-                        SKILL
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    </p>
-                </div>
-            </section>
-            <section class="right2">
-                <div class="skills2">
-                    <h1>
-                        SKILL
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    </p>
-                </div>
-                <div class="skills2">
-                    <h1>
-                        SKILL
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    </p>
-                </div>
-                <div class="skills2">
-                    <h1>
-                        SKILL
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    </p>
-                </div>
-            </section>
-        </section>
+        </section> 
     </section>
-    <section class="page">
-        
-    </section>
-      <!--<header class="fake-sec">
-        <a href="/homepage.html">
-            <h1>
-                HOME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                ABOUT ME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                LEARNING PATH
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                PORTFOLIO
-            </h1>
-        </a>
-      </header>
-    </section>
-    <section class="page">
-      <header class="fake-thi">
-        <a href="/homepage.html">
-            <h1>
-                HOME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                ABOUT ME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                LEARNING PATH
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                PORTFOLIO
-            </h1>
-        </a>
-      </header>
-    </section>
-
-    <section class="page">
-      <header class="fake-fou">
-        <a href="/homepage.html">
-            <h1>
-                HOME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                ABOUT ME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                LEARNING PATH
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                PORTFOLIO
-            </h1>
-        </a>
-      </header>
-    </section>
-
-    <section class="page">
-      <header class="fake-fit">
-        <a href="/homepage.html">
-            <h1>
-                HOME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                ABOUT ME
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                LEARNING PATH
-            </h1>
-        </a>
-        <a href="#">
-            <h1>
-                PORTFOLIO
-            </h1>
-        </a>
-      </header>
-    </section>-->
-
 </body>
 </html>
