--- a/otherpages/blog.html
+++ b/otherpages/blog.html
@@ -13,7 +13,7 @@
     <div class="blank-box">
       <header>
         <div class="back">
-          <a href="/richard.html"><img src="/icons/back.png" alt="backspace icon"></a>
+          <a href="/index.html"><img src="/icons/back.png" alt="backspace icon"></a>
         </div>
         <h1>
           My Blog
