github pages img test

--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
                 <div class="foot">
                     <div class="icon">
                         <a href="https://www.instagram.com/r.ichardl/">
-                            <img src="/icons/instaicon.png" alt="instagram icon">
+                            <img src="icons/instaicon.png" alt="instagram icon">
                         </a>
                     </div>
                     <div class="icon">
                         <a href="https://www.facebook.com/richard.liu.466472">
-                            <img src="/icons/fbicon.png" alt="facebook icon">
+                            <img src="icons/fbicon.png" alt="facebook icon">
                         </a>
                     </div>
                     <div class="icon">
                         <a href="https://www.linkedin.com/in/richard-liu-942818230/">
-                            <img src="/icons/liicon.png" alt="LinkedIn icon">
+                            <img src="icons/liicon.png" alt="LinkedIn icon">
                         </a>
                     </div>
                     <div class="icon">
                         <a href="#">
-                            <img src="/icons/yticon.png" alt="YouTube icon">
+                            <img src="icons/yticon.png" alt="YouTube icon">
                         </a>
                     </div>
                     <div class="spacer">
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="picture">
-                <img src="/images/profilepicture.jpg" alt="YouTube icon">
+                <img src="images/profilepicture.jpg" alt="YouTube icon">
             </div>
         </section>
     </section>
