fixed all images for github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     CONTACT
                 </h1>
             </a>
-            <a href="/otherpages/blog.html">
+            <a href="otherpages/blog.html">
                 <h1>
                     MY BLOG
                 </h1>
@@ -241,69 +241,69 @@
             <div class="skills-grid">
                 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/python.png" alt="Python" class="skill-icon" />
+                    <img src="images/skills-icons/python.png" alt="Python" class="skill-icon" />
                     <h3>Python <span class="chip advanced">Advanced</span></h3>
                     <p>Scripting, Automation, APIs, Testing, Data Handling</p>
                 </div>
 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/c.png" alt="C, C#, C++" class="skill-icon" />
+                    <img src="images/skills-icons/c.png" alt="C, C#, C++" class="skill-icon" />
                     <h3>C / C++ / C# <span class="chip advanced">Advanced</span></h3>
                     <p>Scripting, Automation, APIs, App Development</p>
                 </div>
                 <div class="skill-card">
-                    <img src="/images/skills-icons/java.png" alt="java icon" class="skill-icon" />
+                    <img src="images/skills-icons/java.png" alt="java icon" class="skill-icon" />
                     <h3>Java <span class="chip advanced">Advanced</span></h3>
                     <p>Scripting, OOP, Data Structures and Algorithms</p>
                 </div>
 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/sql.png" alt="SQL" class="skill-icon" />
+                    <img src="images/skills-icons/sql.png" alt="SQL" class="skill-icon" />
                     <h3>SQL <span class="chip advanced">Advanced</span></h3>
                     <p>Database queries, Views, Stored procedures, Performance</p>
                 </div>
 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/html.png" alt="HTML" class="skill-icon" />
+                    <img src="images/skills-icons/html.png" alt="HTML" class="skill-icon" />
                     <h3>HTML / CSS <span class="chip advanced">Advanced</span></h3>
                     <p>Web Design, Responsive layouts, Flexbox, UI styling</p>
                 </div>
 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/pytorch.png" alt="pytorch" class="skill-icon" />
+                    <img src="images/skills-icons/pytorch.png" alt="pytorch" class="skill-icon" />
                     <h3> PyTorch <span class="chip intermediate">Intermediate</span></h3>
                     <p>ANNs, CNNs, Model training, Data Preprocessing</p>
                 </div>
 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/github.png" alt="GitHub" class="skill-icon" />
+                    <img src="images/skills-icons/github.png" alt="GitHub" class="skill-icon" />
                     <h3>Git / GitHub <span class="chip advanced">Advanced</span></h3>
                     <p>Version control, Branching, Agile Delivery</p>
                 </div>
 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/azure.png" alt="Azure" class="skill-icon" />
+                    <img src="images/skills-icons/azure.png" alt="Azure" class="skill-icon" />
                     <h3> MS Azure <span class="chip intermediate">Intermediate</span></h3>
                     <p>Cloud Services, Data Storage, Permission Management, Kubernetes</p>
                 </div>
 
                 <div class="skill-card">
-                    <img src="/images/skills-icons/oracle.png" alt="Oracle" class="skill-icon" />
+                    <img src="images/skills-icons/oracle.png" alt="Oracle" class="skill-icon" />
                     <h3>Oracle / Azure DB <span class="chip advanced">Advanced</span></h3>
                     <p>Schema Management, Secure Integrations, Views, SQL Scripting</p>
                 </div>
                 <div class="skill-card">
-                    <img src="/images/skills-icons/pautomate.png" alt="power automate" class="skill-icon" />
+                    <img src="images/skills-icons/pautomate.png" alt="power automate" class="skill-icon" />
                     <h3>Power Automate <span class="chip advanced">Advanced</span></h3>
                     <p>Automated workflows, Email parsing, Data processing, Integrations</p>
                 </div>
                 <div class="skill-card">
-                    <img src="/images/skills-icons/api.png" alt="API image" class="skill-icon" />
+                    <img src="images/skills-icons/api.png" alt="API image" class="skill-icon" />
                     <h3>REST APIs <span class="chip advanced">Advanced</span></h3>
                     <p>API authentication, Error handling</p>
                 </div>
                 <div class="skill-card">
-                    <img src="/images/skills-icons/jira.png" alt="Jira" class="skill-icon" />
+                    <img src="images/skills-icons/jira.png" alt="Jira" class="skill-icon" />
                     <h3>Jira / Confluence <span class="chip advanced">Advanced</span></h3>
                     <p>Agile project tracking, Standup planning, Documentation</p>
                 </div>
