--- a/locationpages/korea.html
+++ b/locationpages/korea.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="back">
-          <a href="/otherpages/blog.html"><img src="/icons/back.png" alt="backspace icon"></a>
+          <a href="otherpages/blog.html"><img src="icons/back.png" alt="backspace icon"></a>
         </div>
         <h1>
           Korea Travels
@@ -19,7 +19,7 @@
     <section class="cardbox">
         <a href="#">
             <div class="card">
-                <img src="/images/korea/kroea2024.jpg" alt="day 1">
+                <img src="images/korea/kroea2024.jpg" alt="day 1">
                 <h1 class="title">
                     2024 
                 </h1>
@@ -30,7 +30,7 @@
         </a>
         <a href="#">
             <div class="card">
-                <img src="/images/korea/korea2025.jpg" alt="day 2">
+                <img src="images/korea/korea2025.jpg" alt="day 2">
                 <h1 class="title">
                     2025
                 </h1>
