--- a/locationpages/japan.html
+++ b/locationpages/japan.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="back">
-          <a href="/otherpages/blog.html"><img src="/icons/back.png" alt="backspace icon"></a>
+          <a href="otherpages/blog.html"><img src="icons/back.png" alt="backspace icon"></a>
         </div>
         <h1>
           Japan Travels
@@ -20,9 +20,9 @@
         </h4>
     </header>
     <section class="cardbox">
-        <a href="/locationpages/japan/japanday1.html">
+        <a href="locationpages/japan/japanday1.html">
             <div class="card">
-                <img src="/images/japan/jpday1.jpg" alt="day 1">
+                <img src="images/japan/jpday1.jpg" alt="day 1">
                 <h1 class="title">
                     Day 1 <span>May 14th</span>
                 </h1>
@@ -33,7 +33,7 @@
         </a>
         <a href="#">
             <div class="card">
-                <img src="/images/japan/jpday2.jpg" alt="day 2">
+                <img src="images/japan/jpday2.jpg" alt="day 2">
                 <h1 class="title">
                     Day 2 <span>May 15th</span>
                 </h1>
@@ -44,7 +44,7 @@
         </a>
         <a href="#">
             <div class="card">
-                <img src="/images/japan/jpday3.jpg" alt="day 3">
+                <img src="images/japan/jpday3.jpg" alt="day 3">
                 <h1 class="title">
                     Day 3 <span>May 16th</span>
                 </h1>
@@ -55,7 +55,7 @@
         </a>
         <a href="#">
             <div class="card">
-                <img src="/images/japan/jpday4.jpg" alt="day 4">
+                <img src="images/japan/jpday4.jpg" alt="day 4">
                 <h1 class="title">
                     Day 4 <span>May 17th</span>
                 </h1>
@@ -66,7 +66,7 @@
         </a>
         <a href="#">
             <div class="card">
-                <img src="/images/japan/jpday5.jpg" alt="day 5">
+                <img src="images/japan/jpday5.jpg" alt="day 5">
                 <h1 class="title">
                     Day 5 <span>May 18th</span>
                 </h1>
@@ -77,7 +77,7 @@
         </a>
         <a href="#">
             <div class="card">
-                <img src="/images/japan/jpday6.jpg" alt="day 6">
+                <img src="images/japan/jpday6.jpg" alt="day 6">
                 <h1 class="title">
                     Day 6 <span>May 19th</span>
                 </h1>
