--- a/otherpages/blog.html
+++ b/otherpages/blog.html
@@ -13,7 +13,7 @@
     <div class="blank-box">
       <header>
         <div class="back">
-          <a href="/index.html"><img src="/icons/back.png" alt="backspace icon"></a>
+          <a href="index.html"><img src="icons/back.png" alt="backspace icon"></a>
         </div>
         <h1>
           My Blog
@@ -23,8 +23,8 @@
           <a href="#">Toronto</a>
           <a href="#">Quebec</a>
           <a href="#">Vancouver</a>
-          <a href="/locationpages/korea.html">Korea</a>
-          <a href="/locationpages/japan.html">Japan</a>
+          <a href="locationpages/korea.html">Korea</a>
+          <a href="locationpages/japan.html">Japan</a>
         </nav>
       </header>
     </div>
