Fixed absolute path issue for github pages

--- a/blog.html
+++ b/blog.html
@@ -23,8 +23,8 @@
           <a href="#">Toronto</a>
           <a href="#">Quebec</a>
           <a href="#">Vancouver</a>
-          <a href="locationpages/korea.html">Korea</a>
-          <a href="locationpages/japan.html">Japan</a>
+          <a href="korea.html">Korea</a>
+          <a href="japan.html">Japan</a>
         </nav>
       </header>
     </div>
