--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     CONTACT
                 </h1>
             </a>
-            <a href="otherpages/blog.html">
+            <a href="blog.html">
                 <h1>
                     MY BLOG
                 </h1>
