--- a/korea.html
+++ b/korea.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="back">
-          <a href="otherpages/blog.html"><img src="icons/back.png" alt="backspace icon"></a>
+          <a href="blog.html"><img src="icons/back.png" alt="backspace icon"></a>
         </div>
         <h1>
           Korea Travels
