--- a/japan.html
+++ b/japan.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="back">
-          <a href="otherpages/blog.html"><img src="icons/back.png" alt="backspace icon"></a>
+          <a href="blog.html"><img src="icons/back.png" alt="backspace icon"></a>
         </div>
         <h1>
           Japan Travels
@@ -20,7 +20,7 @@
         </h4>
     </header>
     <section class="cardbox">
-        <a href="locationpages/japan/japanday1.html">
+        <a href="#">
             <div class="card">
                 <img src="images/japan/jpday1.jpg" alt="day 1">
                 <h1 class="title">
