Added contact page, added finishing touches

--- a/blog.html
+++ b/blog.html
@@ -19,12 +19,11 @@
           My Blog
         </h1>
         <nav>
-          <a href="#">Gallery</a> <!--# stands for not implemented yet-->
-          <a href="#">Toronto</a>
-          <a href="#">Quebec</a>
-          <a href="#">Vancouver</a>
           <a href="korea.html">Korea</a>
           <a href="japan.html">Japan</a>
+          <a href="#placeholder">Quebec</a>
+          <a href="#placeholder">Vancouver</a>
+          <a href="#placeholder">Gallery</a>
         </nav>
       </header>
     </div>
