--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
                 <div class="skill-card">
                     <img src="images/skills-icons/c.png" alt="C, C#, C++" class="skill-icon" />
                     <h3>C / C++ / C# <span class="chip advanced">Advanced</span></h3>
-                    <p>Scripting, Automation, APIs, App Development</p>
+                    <p>Automation, APIs, App Development</p>
                 </div>
                 <div class="skill-card">
                     <img src="images/skills-icons/java.png" alt="java icon" class="skill-icon" />
                     <h3>Java <span class="chip advanced">Advanced</span></h3>
-                    <p>Scripting, OOP, Data Structures and Algorithms</p>
+                    <p>OOP, Data Structures and Algorithms</p>
                 </div>
 
                 <div class="skill-card">
@@ -284,7 +284,7 @@
                 <div class="skill-card">
                     <img src="images/skills-icons/azure.png" alt="Azure" class="skill-icon" />
                     <h3> MS Azure <span class="chip intermediate">Intermediate</span></h3>
-                    <p>Cloud Services, Data Storage, Permission Management, Kubernetes</p>
+                    <p>Cloud Services, Data Storage, Access Management, Kubernetes</p>
                 </div>
 
                 <div class="skill-card">
@@ -300,19 +300,26 @@
                 <div class="skill-card">
                     <img src="images/skills-icons/api.png" alt="API image" class="skill-icon" />
                     <h3>REST APIs <span class="chip advanced">Advanced</span></h3>
-                    <p>API authentication, Error handling</p>
+                    <p>API Calling, API authentication, HTTP Methods, Error handling</p>
                 </div>
                 <div class="skill-card">
                     <img src="images/skills-icons/jira.png" alt="Jira" class="skill-icon" />
-                    <h3>Jira / Confluence <span class="chip advanced">Advanced</span></h3>
-                    <p>Agile project tracking, Standup planning, Documentation</p>
+                    <h3>Atlassian <span class="chip advanced">Advanced</span></h3>
+                    <p id="contact">Jira, Confluence, Agile Project Tracking, Documentation</p>
                 </div>
             </div>
         </section>
     </section>
     <section class="page"> 
-        <section class="contact" id="contact">
-
+        <section class="contact-card">
+            <h2>Contact Information</h2>
+            <div class="info">
+                <p><strong>Email:</strong> <a href="mailto:richardliu715@gmail.com">richardliu715@gmail.com</a></p>
+                <p><strong>Phone:</strong> +1 (437) 360-8862</p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/richard-liu-942818230/" target="_blank">linkedin.com/in/your-link</a></p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/Rucherd" target="_blank">github.com/Rucherd</a></p>
+                <p><strong>Location:</strong> North York, Toronto, ON</p>
+            </div>
         </section> 
     </section>
 </body>
