--- a/korea.html
+++ b/korea.html
@@ -17,7 +17,7 @@
         </h1>
     </header>
     <section class="cardbox">
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/korea/kroea2024.jpg" alt="day 1">
                 <h1 class="title">
@@ -28,14 +28,17 @@
                 </p>
             </div>
         </a>
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/korea/korea2025.jpg" alt="day 2">
                 <h1 class="title">
                     2025
                 </h1>
                 <p class="desc">
-                    May 10th - May 14th, May 20th - May 23rd
+                    May 10th - May 14th
+                </p>
+                <p class="desc">
+                    May 20th - May 23rd
                 </p>
             </div>
         </a>
