--- a/japan.html
+++ b/japan.html
@@ -20,7 +20,7 @@
         </h4>
     </header>
     <section class="cardbox">
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/japan/jpday1.jpg" alt="day 1">
                 <h1 class="title">
@@ -31,7 +31,7 @@
                 </p>
             </div>
         </a>
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/japan/jpday2.jpg" alt="day 2">
                 <h1 class="title">
@@ -42,7 +42,7 @@
                 </p>
             </div>
         </a>
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/japan/jpday3.jpg" alt="day 3">
                 <h1 class="title">
@@ -53,7 +53,7 @@
                 </p>
             </div>
         </a>
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/japan/jpday4.jpg" alt="day 4">
                 <h1 class="title">
@@ -64,7 +64,7 @@
                 </p>
             </div>
         </a>
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/japan/jpday5.jpg" alt="day 5">
                 <h1 class="title">
@@ -75,7 +75,7 @@
                 </p>
             </div>
         </a>
-        <a href="#">
+        <a href="#placeholder">
             <div class="card">
                 <img src="images/japan/jpday6.jpg" alt="day 6">
                 <h1 class="title">
