--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="spacer">
 
                     </div>
-                    <a class="button" href="/images/2025 July master resume.png"download>Download <br> Resume</a>  
+                    <a class="button" href="images/richard-resume.pdf"download>Download <br> Resume</a>  
                 </div>
             </div>
             <div class="picture">
