contact link tweak

--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
                 <div class="skill-card">
                     <img src="images/skills-icons/jira.png" alt="Jira" class="skill-icon" />
                     <h3>Atlassian <span class="chip advanced">Advanced</span></h3>
-                    <p id="contact">Jira, Confluence, Agile Project Tracking, Documentation</p>
+                    <p>Jira, Confluence, Agile Project Tracking, Documentation</p>
                 </div>
             </div>
         </section>
     </section>
 
-    <section class="contact-card">
+    <section class="contact-card" id="contact">
         <h2>Contact Information</h2>
         <div class="info">
             <p><strong>Email:</strong> <a href="mailto:richardliu715@gmail.com">richardliu715@gmail.com</a></p>
