changed some links to target blank

--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
                 </h3>
                 <div class="foot">
                     <div class="icon">
-                        <a href="https://www.instagram.com/r.ichardl/">
+                        <a href="https://www.instagram.com/r.ichardl/" target="_blank">
                             <img src="icons/instaicon.png" alt="instagram icon">
                         </a>
                     </div>
                     <div class="icon">
-                        <a href="https://www.facebook.com/richard.liu.466472">
+                        <a href="https://www.facebook.com/richard.liu.466472" target="_blank">
                             <img src="icons/fbicon.png" alt="facebook icon">
                         </a>
                     </div>
                     <div class="icon">
-                        <a href="https://www.linkedin.com/in/richard-liu-942818230/">
+                        <a href="https://www.linkedin.com/in/richard-liu-942818230/" target="_blank">
                             <img src="icons/liicon.png" alt="LinkedIn icon">
                         </a>
                     </div>
                     <div class="icon">
-                        <a href="#">
-                            <img src="icons/yticon.png" alt="YouTube icon">
+                        <a href="#placeholder">
+                            <img src="icons/yticon.png" alt="YouTube icon" target="_blank">
                         </a>
                     </div>
                     <div class="spacer">
