replaced youtube link with github link

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                 </h3>
                 <div class="foot">
                     <div class="icon">
+                        <a href="https://github.com/Rucherd" target="_blank">
+                            <img src="icons/github.png" alt="Github icon">
+                        </a>
+                    </div>
+                    <div class="icon">
                         <a href="https://www.instagram.com/r.ichardl/" target="_blank">
                             <img src="icons/instaicon.png" alt="instagram icon">
                         </a>
@@ -70,11 +75,7 @@
                             <img src="icons/liicon.png" alt="LinkedIn icon">
                         </a>
                     </div>
-                    <div class="icon">
-                        <a href="#placeholder">
-                            <img src="icons/yticon.png" alt="YouTube icon" target="_blank">
-                        </a>
-                    </div>
+                    
                     <div class="spacer">
 
                     </div>
